<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.dlraudio</groupId>
  <artifactId>dbPlotter</artifactId>
  <version>1.0.0</version>
  <name>dB Plotter</name>

  <properties>
    <appModule>com.dlraudio.dbplotter</appModule>
    <appMainClass>com.dlraudio.dbplotter.MainApp</appMainClass>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>23</maven.compiler.release>
  </properties>

  <dependencies>
    <!-- Communication Série (Arduino) -->
    <dependency>
      <groupId>com.fazecast</groupId>
      <artifactId>jSerialComm</artifactId>
      <version>2.9.3</version>
    </dependency>

      <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-controls</artifactId>
        <version>23.0.2</version>
      </dependency>

    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-fxml</artifactId>
      <version>23.0.2</version>
    </dependency>

  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <source>23</source>
          <target>23</target>
          <outputDirectory>${project.build.directory}/mods</outputDirectory>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>0.0.8</version>
        <executions>
          <execution>
            <id>default-cli</id>
            <configuration>
              <mainClass>com.dlraudio.dbplotter.MainApp</mainClass>
              <launcher>app</launcher>
              <jlinkZipName>app</jlinkZipName>
              <jlinkImageName>app</jlinkImageName>
              <noManPages>true</noManPages>
              <stripDebug>true</stripDebug>
              <noHeaderFiles>true</noHeaderFiles>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.panteleyev</groupId>
        <artifactId>jpackage-maven-plugin</artifactId>
        <version>1.6.4</version>

        <configuration>
          <name>dBPlotter</name>
          <appVersion>${project.version}</appVersion>
          <vendor>DLR Audio</vendor>
          <runtimeImage>${java.home}</runtimeImage>
          <module>${appModule}/${appMainClass}</module>
          <modulePaths>
            <modulePath>${project.build.directory}/mods</modulePath>
          </modulePaths>
          <destination>target/dist</destination>
          <javaOptions>
            <option>--enable-preview</option>
            <option>-Dfile.encoding=UTF-8</option>
          </javaOptions>
        </configuration>

        <executions>
          <execution>
            <id>mac</id>
            <configuration>
              <icon>src/main/resources/com/dlraudio/ui/images/icon.icns</icon>
            </configuration>
          </execution>
          <execution>
            <id>win</id>
            <configuration>
              <icon>src/main/resources/com/dlraudio/ui/images/icon.ico</icon>
              <winMenu>true</winMenu>
            </configuration>
          </execution>
        </executions>
      </plugin>

    </plugins>
  </build>
</project>